--- a/getting-started-with-jest/package.json
+++ b/getting-started-with-jest/package.json
@@ -6,7 +6,7 @@
     "jest": "^27.3.1"
   },
   "scripts": {
-    "test": "jest"
+    "test": "jest --coverage"
   },
   "keywords": [],
   "author": "",
